# mercator

./: BRANCHPLAN.txt  CMakeLists.txt  README.md  mercator-rules.txt
compiler/: .gitignore  CMakeLists.txt  README.build  app.cc  app.h  build_config.h.in  buildapp.cc  buildapp.h  inputspec.h  main.cc  mercator-lexer.ll  mercator-parser.yy  options.cc  options.h  parse.cc  parse.h  parser-driver.cc  parser-driver.h  symboltable.h  topoverify.cc  topoverify.h  typecheck.cc  typecheck.h
compiler/codegen/: Formatter.cc  Formatter.h  codegen_utils.h  gen_deviceapp_class.cc  gen_deviceapp_class.h  gen_deviceapp_ctor.cc  gen_deviceapp_ctor.h  gen_hostapp_class.cc  gen_hostapp_class.h
doc/: CMakeLists.txt  Doxyfile  mercator-manual.tex
examples/: CMakeLists.txt
examples/AggEnumTest/: AggEnum.cu  AggEnumDriver.cu  AggEnumTest.mtr  CMakeLists.txt
examples/AsyncFilter/: AFDriver.cu  AsyncFilter.cu  AsyncFilter.mtr  CMakeLists.txt
examples/EvenFilter/: CMakeLists.txt  EFDriver.cu  EvenFilter.cu  EvenFilter.mtr
examples/InterruptSim/: CMakeLists.txt  InterruptSim.cu  InterruptSim.mtr  InterruptSimDriver.cu
examples/LiteAggEnumTest/: CMakeLists.txt  LiteAggEnum.cu  LiteAggEnumDriver.cu  LiteAggEnumTest.mtr
examples/LoopFilter/: CMakeLists.txt  LFDriver.cu  LoopFilter.cu  LoopFilter.mtr  UIntWithCounter.h
examples/Mandelbrot/: CMakeLists.txt  MandelDriver.cu  Mandelbrot.cu  Mandelbrot.mtr  Pixel.h
examples/ModFilter/: CMakeLists.txt  MFDriver.cu  MFRangeDriver.cu  ModFilter.cu  ModFilter.mtr
examples/OtherTaxiApp/: CMakeLists.txt  OtherTaxi.cu  OtherTaxiApp.mtr
examples/SameTypePipe/: CMakeLists.txt  SameTypePipe_1to1map.cu  SameTypePipe_1to1map.mtr  SameTypePipe_driver.cu  driver_config.cuh
examples/SameTypePipeAT/: CMakeLists.txt  SameTypePipe_1to1map.cu  SameTypePipe_1to1map.mtr  SameTypePipe_1to1map_AT.cu.skl  SameTypePipe_driver.cu  driver_config.cuh  validate.cu
examples/SameTypePipeAT/BlackScholes/: BlackScholes_device.cuh
examples/SimpleCycleSim/: SimpleCycleSim.mtr
examples/SplitFilter/: CMakeLists.txt  SFDriver.cu  SplitFilter.cu  SplitFilter.mtr
examples/StatTest/: CMakeLists.txt  Stat.cu  StatDriver.cu  StatTest.mtr
examples/SynthGain/: CMakeLists.txt  SGDriver.cu  SynthGain.cu  SynthGain.mtr
examples/TaggedCharTaxiApp/: CMakeLists.txt  Line.cuh  StrFunc.cuh  TaggedCharTaxi.cu  TaggedCharTaxiApp.mtr  TaggedPosition.cuh
examples/TaxiApp/: CMakeLists.txt  Line.cuh  Position.cuh  StrFunc.cu  StrFunc.cuh  Taxi.cu  TaxiApp.mtr  TaxiDriver.cu
examples/TaxiApp/randGPS/: randGPS.cpp
examples/old/: gpu_lookup.sh
examples/old/BLAST_cpp/: blast5_6.cpp
examples/old/BLAST_cpp/BlastData/: convertBases2Binary.cpp  d2-replicated.txt  d2.txt  dBig.txt  db.txt  ecoli-k12-231k-binary.txt  ecoli-k12-231k.txt  ecoli-k12-binary.txt  junk.txt  qRand.txt  query-replicated.txt  query.txt  salmonella-10k.txt  salmonella-20k.txt  salmonella-2k.txt  salmonella-30k.txt  salmonella-40k.txt  salmonella-4k.txt  salmonella-50k.txt  salmonella-5k.txt  salmonella-6k.txt  salmonella-8k.txt
examples/old/scripts/: analyzeOccData.sh  analyzeTimingData_perfModel.sh  analyzeTimingData_perfModel_withTail.sh  runBlastExps.sh  runSynthExps.sh  run_nvprof  sortTimingOutput.sh
examples/old/src/userInput/: BackFire.cu.bk  BackFire_driver.cu  Blast2ModulesApp_1to1map.cu.bk  Blast2Modules_driver.cu  BlastApp-4to1.cu.bk  BlastApp.cu.bk  BlastApp_1to1map.cu.bk  BlastApp_2to1map.cu.bk  BlastApp_4to1map.cu.bk  BlastUberApp_1to1map.cu.bk  BlastUberApp_2to1map.cu.bk  BlastUberApp_4to1map.cu.bk  BlastUber_driver.cu  Blast_driver.cu  DiffTypePipe_1to1map.cu.bk  DiffTypePipe_1to2map.cu.bk  DiffTypePipe_1to4map.cu.bk  DiffTypePipe_2to1map.cu.bk  DiffTypePipe_4to1map.cu.bk  DiffTypePipe_driver.cu  MultiAppTest_driver.cu  PipeEltT.cuh  Rep4DiffPipe_1to1map.cu.bk  Rep4DiffPipe_driver.cu  Rep4SamePipe_1to1map.cu.bk  Rep4SamePipe_driver.cu  Rep4SemiDiffPipe_1to1map.cu.bk  Rep4SemiDiffPipe_driver.cu  RepDiffPipe_1to1map.cu.bk  RepDiffPipe_driver.cu  RepSamePipe_1to1map.cu.bk  RepSamePipe_driver.cu  SameTypePipe_1to1map.cu  SameTypePipe_1to1map.cu.bk2  SameTypePipe_1to2map.cu.bk  SameTypePipe_1to4map.cu.bk  SameTypePipe_2to1map.cu.bk  SameTypePipe_4to1map.cu.bk  SameTypePipe_driver.cu  SelfLoop_1to1map.cu.bk  (+22 more)
examples/old/src/userInput-specs/: BackFire_spec.cu  Blast2Modules_1to1map_spec.cu  BlastUber_1to1map_spec.cu  BlastUber_1to2map_spec.cu  BlastUber_1to4map_spec.cu  BlastUber_2to1map_spec.cu  BlastUber_4to1map_spec.cu  Blast_1to1map_spec.cu  Blast_1to2map_spec.cu  Blast_1to4map_spec.cu  Blast_2to1map_spec.cu  Blast_4to1map_spec.cu  Blast_spec.cu  DataPlaceholders.h  DiffTypePipe_1to1map_spec.cu  DiffTypePipe_1to2map_spec.cu  DiffTypePipe_1to4map_spec.cu  DiffTypePipe_2to1map_spec.cu  DiffTypePipe_4to1map_spec.cu  LoopTopoTest.cu  MultiAppTest_spec.cu  Rep4DiffPipe_1to1map_spec.cu  Rep4SamePipe_1to1map_spec.cu  Rep4SemiDiffPipe_1to1map_spec.cu  RepDiffPipe_1to1map_spec.cu  RepSamePipe_1to1map_spec.cu  SameTypePipe_1to1map_spec.cu  SameTypePipe_1to2map_spec.cu  SameTypePipe_1to4map_spec.cu  SameTypePipe_2to1map_spec.cu  SameTypePipe_4to1map_spec.cu  SelfLoop_1to1map_spec.cu  SelfLoop_1to2map_spec.cu  SelfLoop_1to4map_spec.cu  SelfLoop_2to1map_spec.cu  SelfLoop_4to1map_spec.cu  SelfLoop_allSinks_spec.cu  SynthApp0_spec.cu  SynthApp1_spec.cu  SynthApp2_spec.cu  (+7 more)
examples/old/src/userInput/tests/: blastData.cuh  datatypes.h
runtime/: device_config.cuh  options.cuh  version.h  version.h.in
runtime/deviceCode/: BufferedChannel.cuh  BufferedChannelBase.cuh  Channel.cuh  ChannelBase.cuh  ChannelBuffer.cuh  ChannelBufferBase.cuh  DeviceApp.cuh  ModuleType.cuh  ModuleTypeBase.cuh  ModuleType_Enumerate.cuh  ModuleType_SingleItem.cuh  ModuleType_Sink.cuh  ModuleType_Source.cuh  Node.cuh  NodeBase.cuh  NodeBaseWithChannels.cuh  NodeFunction.cuh  NodeFunction_Buffered.cuh  NodeFunction_Enumerate.cuh  NodeFunction_Interrupt.cuh  NodeFunction_Sink.cuh  NodeFunction_User.cuh  Node_Buffered.cuh  Node_Enumerate.cuh  Node_Queue.cuh  Node_SingleItem.cuh  Node_Sink.cuh  Node_Source.cuh  ParentBuffer.cuh  TODO  (+12 more)
(+32 files in other folders)
